# veilcomm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/veilcomm-app/: Cargo.toml
crates/veilcomm-app/src/: client.rs  error.rs  lib.rs
crates/veilcomm-cli/: Cargo.toml
crates/veilcomm-cli/src/: main.rs
crates/veilcomm-core/: Cargo.toml
crates/veilcomm-core/src/: error.rs  lib.rs  steganography.rs
crates/veilcomm-core/src/crypto/: aead.rs  kdf.rs  keys.rs  mod.rs  pq.rs  ratchet.rs  sender_key.rs  x3dh.rs
crates/veilcomm-core/src/protocol/: group.rs  message.rs  mod.rs  session.rs
crates/veilcomm-gui/: Cargo.toml
crates/veilcomm-gui/src/: main.rs
crates/veilcomm-gui/static/: index.html
crates/veilcomm-network/: Cargo.toml
crates/veilcomm-network/src/: error.rs  lib.rs  mesh.rs  nat.rs  peer.rs  protocol.rs  service.rs
crates/veilcomm-network/src/dht/: mod.rs
crates/veilcomm-network/src/transport/: mod.rs  quic.rs  tor.rs
crates/veilcomm-storage/: Cargo.toml
crates/veilcomm-storage/src/: database.rs  error.rs  keystore.rs  lib.rs
