[workspace]
resolver = "2"
members = [
    "crates/veilcomm-core",
    "crates/veilcomm-network",
    "crates/veilcomm-storage",
    "crates/veilcomm-app",
    "crates/veilcomm-cli",
    "crates/veilcomm-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["VeilComm Contributors"]
repository = "https://github.com/veilcomm/veilcomm"

[workspace.dependencies]
# Internal crates
veilcomm-core = { path = "crates/veilcomm-core" }
veilcomm-network = { path = "crates/veilcomm-network" }
veilcomm-storage = { path = "crates/veilcomm-storage" }
veilcomm-app = { path = "crates/veilcomm-app" }

# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "hazmat"] }
curve25519-dalek = "4.1"
chacha20poly1305 = "0.10"
blake2 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_core = "0.6"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"
hex = "0.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Networking
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.12"
tokio-socks = "0.5"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
async-trait = "0.1"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
rpassword = "7.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Web server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
open = "5"

# Testing
proptest = "1.4"
