[package]
name = "veilcomm-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web GUI for VeilComm - serves a glassmorphism frontend on localhost"

[[bin]]
name = "veilcomm-gui"
path = "src/main.rs"

[dependencies]
veilcomm-core = { workspace = true }
veilcomm-network = { workspace = true }
veilcomm-storage = { workspace = true }
veilcomm-app = { workspace = true }

# Web server
axum = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
chrono = { workspace = true }
dirs = "5.0"
hex = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
open = { workspace = true }

# Error handling
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
