[package]
name = "veilcomm-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Encrypted storage and key management for VeilComm"

[dependencies]
veilcomm-core = { workspace = true }

# Storage
rusqlite = { workspace = true }

# Crypto
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
zeroize = { workspace = true }
secrecy = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
